objects/CRA_CredAnalysis_ARG__c.object
<CustomObject>
    <fields>
        <fullName>Account_ARG__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3) OR (4 AND 5)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>MX Standard</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>MX On-Trade, MX Off-Trade</value>
            </filterItems>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Payer</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Standard AR, Standard UY</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Off-Trade ARG, Off-Trade URU, On-Trade ARG, On-Trade URU, Events ARG, Events URU</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credits Analysis</relationshipLabel>
        <relationshipName>Credits_Analysis</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Bank1Account_ARG__c</fullName>
        <label>Bank Account</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank1Branch_ARG__c</fullName>
        <label>Bank Branch</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank1Contact_ARG__c</fullName>
        <label>Bank Contact</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank1_ARG__c</fullName>
        <label>Bank</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank2Account_ARG__c</fullName>
        <label>Bank Account</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank2Branch_ARG__c</fullName>
        <label>Bank Branch</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank2Contact_ARG__c</fullName>
        <label>Bank Contact</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank2_ARG__c</fullName>
        <label>Bank</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommercialGuarantExpDate_ARG__c</fullName>
        <label>Commercial Guarantee Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CommercialGuarantee_ARG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commercial Guarantee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreditAnalystComment_ARG__c</fullName>
        <label>Credit Analyst Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditLimitGranted_ARG__c</fullName>
        <label>Credit Limit Granted</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CreditLimitRequested_ARG__c</fullName>
        <label>Credit Limit Requested</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CreditRiskIndex_ARG__c</fullName>
        <label>Credit Risk Index</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_MX_ApprovalProcessAproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Process Aproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_MX_ApprovedByExecutive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved by Executive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_MX_ApprovedByManager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved by Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_MX_AuthorizedByCommittee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Credit committee authorization</description>
        <label>Authorized by Committee?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_MX_ClientAN8__c</fullName>
        <formula>Account_ARG__r.Client_code_AN8__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client AN8</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_MX_CreditAndCollectionsExecutive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is updated by a trigger when the record is inserted. It will contains a lookup to the user that was selected in the field &apos;LAT_MX_CreditAndCollectionsExecutive__c&apos; of the related Account, or if the field is blank according to the Account Channel it will be a lookup to the users Miguel Vega or Veronica Morales. This user will be the first approver of the approval process.</description>
        <label>Credit and Collections Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Credits_Analysis1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_MX_CreditAndCollectionsManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is updated by a trigger when the record is inserted. It will contains a lookup to the manager of the user in field &apos;	LAT_MX_CreditAndCollectionsExecutive__c&apos;. This user will be the second approver of the approval process.</description>
        <label>Credit and Collections Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Credits_Analysis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_MX_Deposit__c</fullName>
        <label>Deposit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_MX_Mortgage__c</fullName>
        <label>Mortgage</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_MX_PromissoryNoteAmount__c</fullName>
        <formula>LAT_MX_PromissoryNoteNumber__r.LAT_MX_Amount__c</formula>
        <label>Promissory Note Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_MX_PromissoryNoteDueDate__c</fullName>
        <formula>LAT_MX_PromissoryNoteNumber__r.LAT_MX_DueDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promissory Note Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_MX_PromissoryNoteNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promissory Note Number</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account_ARG__c</field>
                <operation>equals</operation>
                <valueField>LAT_MX_PMN_PromissoryNote__c.LAT_MX_Executor__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LAT_MX_PMN_PromissoryNote__c</referenceTo>
        <relationshipLabel>Credits Analysis</relationshipLabel>
        <relationshipName>Credits_Analysis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastCreditReview_ARG__c</fullName>
        <label>Last Credit Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastFinancialPresentedDate_ARG__c</fullName>
        <label>Last Financials Presented Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Properties_ARG__c</fullName>
        <label>Properties / Facilities</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Owned</fullName>
                </value>
                <value>
                    <fullName>Rented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QtyEmployess_ARG__c</fullName>
        <label>Employees Qty</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REBAExpDate_ARG__c</fullName>
        <label>REBA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>REBA_ARG__c</fullName>
        <label>REBA</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RentalPaid_ARG__c</fullName>
        <label>Monthly Rental Paid</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RevisionDate_ARG__c</fullName>
        <label>Revision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesmanComments_ARG__c</fullName>
        <label>Salesman Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SqrMeters_ARG__c</fullName>
        <label>Sqr Meters</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Credit Analysis</label>
    <nameField>
        <displayFormat>AC{000000}</displayFormat>
        <label>Credit Analysis Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credits Analysis</pluralLabel>
    <recordTypes>
        <fullName>CRA_Standard_ARG</fullName>
        <active>true</active>
        <label>Standard AR</label>
    </recordTypes>
    <recordTypes>
        <fullName>CRA_Standard_UY</fullName>
        <active>true</active>
        <label>Standard UY</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_MX_CRA_Standard</fullName>
        <active>true</active>
        <description>Record Type standard for Mexico</description>
        <label>MX Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CRA_VR01_CreditLimitValidation_AR</fullName>
        <active>true</active>
        <description>The suggested credit limit can only be completed if the client is a parent or individual customer and type of sale.</description>
        <errorConditionFormula>($RecordType.DeveloperName=&apos;CRA_Standard_ARG&apos; || $RecordType.DeveloperName=&apos;CRA_Standard_UY&apos;)  &amp;&amp;
 NOT(ISBLANK( CreditLimitRequested_ARG__c ))  &amp;&amp;
 (NOT( ISPICKVAL( Account_ARG__r.Type ,&quot;Sale_ARG&quot;) ) || NOT( ISBLANK(Account_ARG__r.ParentId)))</errorConditionFormula>
        <errorDisplayField>CreditLimitRequested_ARG__c</errorDisplayField>
        <errorMessage>The suggested credit limit can only be completed if the client is a parent or individual customer and type of sale.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRA_VR02_RevenueUFValidation_AR</fullName>
        <active>true</active>
        <description>To enter Revenue, the state or province. Should be selected Buenos Aires.</description>
        <errorConditionFormula>($RecordType.DeveloperName=&apos;CRA_Standard_ARG&apos; || $RecordType.DeveloperName=&apos;CRA_Standard_UY&apos;)  &amp;&amp;
(  ( Account_ARG__r.Revenue_UF__c != &apos;1&apos;) &amp;&amp;   ( NOT( ISBLANK(REBA_ARG__c  )  )  ||   NOT( ISBLANK(REBAExpDate_ARG__c  )  ) ))</errorConditionFormula>
        <errorMessage>To enter this value the state / province Buenos Aires should be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRA_VR03_RevenueUFValidation2_AR</fullName>
        <active>true</active>
        <description>If the state is Buenos Aires, you must complete REBA_ARG__c  and REBAExpDate_ARG__c .</description>
        <errorConditionFormula>($RecordType.DeveloperName=&apos;CRA_Standard_ARG&apos; || $RecordType.DeveloperName=&apos;CRA_Standard_UY&apos;)  &amp;&amp;
(( Account_ARG__r.Revenue_UF__c = &apos;1&apos;) &amp;&amp;   
(  ISBLANK(REBA_ARG__c  )    ||   ISBLANK(REBAExpDate_ARG__c  )  ))</errorConditionFormula>
        <errorMessage>If the state is Buenos Aires, you must complete REBA and REBA Expiration Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRA_VR04_CurrencyValidation_AR</fullName>
        <active>true</active>
        <description>This VR validates that the registry has the same currency the customer has.</description>
        <errorConditionFormula>($RecordType.DeveloperName=&apos;CRA_Standard_ARG&apos; || $RecordType.DeveloperName=&apos;CRA_Standard_UY&apos;)  &amp;&amp; (TEXT(CurrencyIsoCode)  &lt;&gt; 
TEXT(Account_ARG__r.CurrencyIsoCode))</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>You can not select a currency different from the customer one</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LAT_MX_CRA_VR01_AccountValidation</fullName>
        <active>true</active>
        <description>Only Account with Type &apos;Payer&apos; can be selected</description>
        <errorConditionFormula>$RecordType.DeveloperName=&apos;LAT_MX_CRA_Standard&apos;
&amp;&amp;
Account_ARG__c != null
&amp;&amp;
NOT(ISPICKVAL(Account_ARG__r.Type,&apos;Payer&apos;))</errorConditionFormula>
        <errorDisplayField>Account_ARG__c</errorDisplayField>
        <errorMessage>Only Account with Type &apos;Payer&apos; can be selected</errorMessage>
    </validationRules>
</CustomObject>